Fixing layout issues

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -131,6 +131,9 @@ header {
     margin-top: 2.17rem;
     padding-bottom: 2.25rem;
   }
+  .cart {
+    margin-right: 0;
+  }
   .menu-btn {
     display: none;
   }
