--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -42,7 +42,7 @@
   display: block;
   text-align: center;
   margin: 0 auto;
-  width: 10.06rem;
+  width: 10.1rem;
   padding: 0.94rem 1.84rem 0.94rem 1.97rem;
   color: var(--clr-white-900);
   background-color: var(--clr-primary);
@@ -87,8 +87,8 @@
   }
   .banner {
     background: var(--clr-black-700) url("../../../assets/images/home/desktop/image-hero.jpg") no-repeat;
-    background-position: -1rem -3rem;
-    background-size: 80rem;
+    background-position: -9rem -5rem;
+    background-size: 90rem;
     width: 69.36456rem;
     margin: 0 auto;
   }
